[package]
name = "gorc"
version = "0.1.0"
authors = ["Allyn Bottorff"]
license = "Apache-2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = { version = "3.2.0", features = ["json"] }
