[package]
name = "gorc"
version = "1.0.1"
authors = ["Allyn Bottorff"]
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/allyn-bottorff/gorc"
description = "GitHub Org Repostiory Clone (GORC) - A clone and fetch tool for entire GitHub organizations"
readme = "README.md"
keywords = ["cli", "github", "org", "jj", "git"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["process", "rt"] }
ureq = { version = "3.2.0", features = ["json"] }
url = "2.5.8"
